deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: bstijnb/browser-client:103b5222cd7b310815d1d7077f7badfd245129ff
        imagePullPolicy: Always
        ports:
        - containerPort: 80
